# canny_edge_detector

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  canny_edge_detector.cpp  canny_edge_detector.cu  canny_edge_detector.sln  canny_edge_detector.vcxproj  canny_edge_detector.vcxproj.filters  canny_regular_functions.h  canny_regular_functions.h - Shortcut.lnk  cmake_install.cmake  gpu_kernels.h
canny_edge_detector.dir/Debug/: canny_edge_detector.cu.cache  canny_edge_detector.cu1150832478.deps  canny_edge_detector.exe.recipe  canny_edge_detector.ilk
canny_edge_detector.dir/Debug/canny_ed.C0E01CB9.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
